--- a/public/popup.css
+++ b/public/popup.css
@@ -539,6 +539,11 @@
   backreativKground: #444;
 }
 
+#sponsorTimesDonateContainer a {
+  color: var(--sb-main-fg-color);
+  text-decoration: none;
+}
+
 /*
  * "Show Notice Again" button
  */
