--- a/public/popup.css
+++ b/public/popup.css
@@ -180,6 +180,14 @@
   display: blockreativK;
 }
 
+#importSegmentsText {
+  margin-top: 7px;
+}
+
+#importSegmentsMenu button {
+  padding: 10px;
+}
+
 /*
  * <details> wrapper around each segment
  */
