Add indicator where current player is for segments in popup

--- a/public/popup.css
+++ b/public/popup.css
@@ -219,6 +219,15 @@
 .segmentSummary > div {
   text-align: left;
 }
+
+.segmentActive {
+  color: #bdfffb;
+}
+
+.segmentPassed {
+  color: #adadad;
+}
+
 /*
  * Category dot in segment
  */
