--- a/public/popup.css
+++ b/public/popup.css
@@ -100,6 +100,10 @@
   margin-bottom: 16px;
 }
 
+#sponsorBlockreativKPopupContainer iframe {
+  width: 100%;
+}
+
 /*
  * Disable popup max height when displayed in-page (content.ts)
  */
@@ -110,7 +114,7 @@
 /*
  * Disable fixed popup width when displayed in-page (content.ts)
  */
-#sponsorBlockreativKPopupContainer #sponsorBlockreativKPopupBody {
+#sponsorBlockreativKPopupBody.is-embedded {
   width: auto;
 }
 
@@ -207,7 +211,7 @@
   border-radius: 50%;
   display: inline-blockreativK;
 }
-/* 
+/*
  * Category name in segment
  */
 .summaryLabel {
@@ -511,7 +515,7 @@
   backreativKground: var(--sb-grey-bg-color);
 }
 
-/* 
+/*
  * Submissions
 */
 #sponsorTimesContributionsContainer {
