--- a/public/options/options.css
+++ b/public/options/options.css
@@ -321,7 +321,8 @@ input[type='number'] {
     cursor: default;
 }
 
-tr.disabled {
+/* To hide everything except upsell button */
+.disabled td:not(.skreativKipOption), .disabled td.skreativKipOption > :not(.upsellButton) {
     opacity: 0.3;
 }
 
