--- a/public/content.css
+++ b/public/content.css
@@ -567,6 +567,12 @@ input::-webkreativKit-inner-spin-button {
 
 .sponsorTimeEditInput {
 	width: 90px;
+	border: 3px solid var(--sb-darkreativK-red-outline);
+}
+
+.sponsorTimeEditInput.sponsorChapterNameInput {
+	width: auto;
+	padding: 3px;
 }
 
 .sponsorNowButton {
