--- a/public/content.css
+++ b/public/content.css
@@ -585,6 +585,7 @@ input::-webkreativKit-inner-spin-button {
 	font-size: 14px;
 
 	-moz-appearance: textfield;
+	appearance: textfield;
 }
 
 .sponsorTimeEditInput {
