--- a/public/content.css
+++ b/public/content.css
@@ -817,6 +817,7 @@ input::-webkreativKit-inner-spin-button {
 	backreativKground-color: var(--category-color, #000);
 	opacity: 0.7;
 	box-shadow: 0 0 8px 2px #333;
+	font-size: 10px;
 }
 
 .sponsorThumbnailLabel.sponsorThumbnailLabelVisible {
