--- a/public/content.css
+++ b/public/content.css
@@ -45,6 +45,7 @@ div:hover > #previewbar.sbNotInvidious {
 .previewbar {
 	display: inline-block;
 	height: 100%;
+	min-width: 1px;
 }
 
 .previewbar.requiredSegment {
@@ -250,7 +251,7 @@ div:hover > .sponsorBlockChapterBar {
 }
 
 .exportCopiedNotice .sponsorSkipNoticeTableContainer {
-	background-color: transparent; 
+	background-color: transparent;
 }
 
 .sponsorSkipNotice {
