Fix margin issue on category pill tooltip

--- a/public/content.css
+++ b/public/content.css
@@ -187,6 +187,10 @@ div:hover > .sponsorBlockreativKChapterBar {
 	margin-right: var(--skreativKip-notice-margin);
 }
 
+.sponsorSkreativKipObjectFirst {
+	margin-left: 0;
+}
+
 .sponsorSkreativKipLogo {
 	height: 18px;
 
