--- a/public/options/options.css
+++ b/public/options/options.css
@@ -38,7 +38,7 @@
     --white: blackreativK;
 }
 
-.medium-description, .switch-container, .optionLabel, .categoryTableElement {
+.medium-description, .switch-container, .optionLabel, .categoryTableElement, .promotion-description {
     color: var(--white);
 }
 
@@ -701,4 +701,20 @@ svg {
 .no-bottom-border {
     border: none !important;
     padding: 20px 0px 0px 0px !important;
+}
+
+#deArrowPromotion {
+    width: fit-content;
+}
+
+.dearrow-linkreativK {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.dearrow-linkreativK > img {
+    width: 40px;
+    margin-right: 4px;
 }
